# fips3

./: .appveyor.yml  .dockerignore  .gitattributes  .gitignore  .gitignore.swp  .travis.yml  CMakeLists.txt  CNAME  Dockerfile.in  README.md  _config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-issue-template.md  release-issue-template.md
.github/workflows/: tests.yml
include/: abstractfitsstorage.h  abstractopenglplan.h  abstractopengltexture.h  abstractopengltransform.h  application.h  borderrectf.h  colormapwidget.h  exception.h  fits.h  flipwidget.h  instance.h  levelswidget.h  mainwindow.h  mmapfitsstorage.h  mousepositionwidget.h  openglcolormap.h  openglerrors.h  openglfeatures.h  openglplan.h  openglplane.h  openglplanfactory.h  openglplanresolver.h  openglshaderprogram.h  openglshaderunifroms.h  opengltexture.h  opengltransform.h  openglwidget.h  palettewidget.h  pixel.h  playback.h  playbackwidget.h  rotationwidget.h  scientificspinbox.h  scrollarea.h  scrollzoomarea.h  spinboxwithslider.h  viewrect.h  wcsdata.h
include/utils/: exception.h  minmax.h  openglrowalign.h  optional.h  result.h  swapbytes.h
src/: abstractfitsstorage.cpp  abstractopenglplan.cpp  abstractopengltexture.cpp  abstractopengltransform.cpp  application.cpp  borderrectf.cpp  colormapwidget.cpp  exception.cpp  fits.cpp  flipwidget.cpp  instance.cpp  levelswidget.cpp  main.cpp  mainwindow.cpp  mmapfitsstorage.cpp  mousepositionwidget.cpp  openglcolormap.cpp  openglerrors.cpp  openglfeatures.cpp  openglplan.cpp  openglplane.cpp  openglplanfactory.cpp  openglshaderprogram.cpp  openglshaderunifroms.cpp  opengltexture.cpp  opengltransform.cpp  openglwidget.cpp  palettewidget.cpp  pixel.cpp  playback.cpp  playbackwidget.cpp  rotationwidget.cpp  scientificspinbox.cpp  scrollarea.cpp  scrollzoomarea.cpp  spinboxwithslider.cpp  viewrect.cpp  wcsdata.cpp
src/utils/: exception.cpp  openglrowalign.cpp
test/: borderrectf.cpp  fits.cpp  openglplane.cpp  openglshaderuniforms.cpp  opengltransform.cpp
test/data/: gradient.fits  header_end.fits  header_unexpected_end.fits  movie-32.fits  movie-64.fits  movie16.fits  movie32.fits  movie64.fits  movie8.fits  sombrero-32.fits  sombrero-64.fits  sombrero16.fits  sombrero32.fits  sombrero64.fits  sombrero8.fits
test/utils/: minmax.cpp  openglrowalign.cpp  optional.cpp  swapbytes.cpp
